[package]
name = "scrape_blogger"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.16", features = ["derive"] }
fs2 = "0.4.3"
indicatif = "0.17.8"
rayon = "1.10.0"
regex = "1.10.6"
reqwest = { version = "0.12.7", features = ["blocking"] }
scraper = "0.20.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
